backend/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend #Sets Deployment name
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
    template:
      metadata:
        labels: backend
    spec:
      container:
      - name: backend
        image: 3a7jouokyffroregistry.azurecr.io/gaisush/frontend:latest
        imagepullpolicy: "Always"
        ports:
          - containerPort: 8000
      imagePullSecrets:
        - name: docker-pull-secret
