backend/k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend
spec:
  ingress:
    - port:
      - port: 8000
        protocol: TCP
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Ingress
